--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cowsay-mcp",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "description": "Cowsay MCP Server, providing ASCII art cow capabilities for LLMs.",
     "private": false,
     "type": "module",
@@ -16,8 +16,8 @@
     "author": "Sean Chow <mrseanchow@gmail.com>",
     "license": "MIT",
     "main": "./dist/index.cjs",
-    "module": "./dist/index.js",
-    "types": "./dist/index.d.ts",
+    "module": "./src/index.ts",
+    "types": "./src/index.d.ts",
     "bin": {
         "cowsay-mcp": "dist/index.js"
     },
@@ -31,8 +31,15 @@
         "node": ">=20.0.0"
     },
     "scripts": {
-        "dev": "tsx src/index.ts",
-        "build": "tsup && node -e \"require('fs').chmodSync('dist/index.js', '755')\"",
+        "dev": "npx @smithery/cli dev",
+        "build": "npm run build:http",
+        "build:stdio": "tsc",
+        "build:http": "npx @smithery/cli build",
+        "start": "npm run start:http",
+        "start:http": "node .smithery/index.cjs",
+        "start:stdio": "node dist/index.js",
+        "prepare": "npm run build:stdio",
+        "prepublishOnly": "npm run build:stdio",
         "lint": "eslint src",
         "lint:fix": "eslint src --fix"
     },
@@ -56,20 +63,23 @@
             "import": "./dist/index.js"
         }
     },
+    "dependencies": {
+        "@modelcontextprotocol/sdk": "^1.17.3",
+        "@smithery/cli": "^1.5.2",
+        "cowsay": "^1.5.0",
+        "zod": "^3.25.76"
+    },
     "devDependencies": {
         "@eslint/js": "^8.56.0",
-        "@types/node": "^22.13.10",
+        "@smithery/cli": "^1.2.4",
+        "@smithery/sdk": "^1.6.8",
+        "@types/node": "^22.0.0",
         "@typescript-eslint/eslint-plugin": "^7.0.0",
         "@typescript-eslint/parser": "^7.0.0",
-        "cowsay": "^1.5.0",
         "eslint": "^8.56.0",
         "tsup": "^8.4.0",
         "tsx": "^4.20.5",
         "typescript": "^5.3.3",
         "typescript-eslint": "^7.0.0"
-    },
-    "dependencies": {
-        "@modelcontextprotocol/sdk": "^1.7.0",
-        "cowsay": "^1.5.0"
     }
 }
